// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard debe de mostrar el componente correctamente 1`] = `
<div
  className="productCard undefined"
  style={Object {}}
>
  <h1>
    Producto 
  </h1>
</div>
`;

exports[`ProductCard debe incrementar el contador 1`] = `
<div
  className="productCard undefined"
  style={Object {}}
>
  <h1>
    Product card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;
